added some styles into style.css with green bg

--- a/css/style.css
+++ b/css/style.css
@@ -53,3 +53,19 @@ body {
 }
 
 
+.box {
+  background-color: green;
+  max-width: 800px;
+  width: 100%;
+  margin: 15px auto;
+  padding: 45px;
+}
+
+.box__title {
+  text-align: center;
+  padding: 20px 40px;
+  color: antiquewhite;
+  font-size: 40px;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
