--- a/css/style.css
+++ b/css/style.css
@@ -54,18 +54,18 @@ body {
 
 
 .box {
-  background-color: green;
-  max-width: 800px;
+  background-color: pink;
+  max-width: 1200px;
   width: 100%;
-  margin: 15px auto;
-  padding: 45px;
+  margin: 5px auto;
+  padding: 55px;
 }
 
 .box__title {
-  text-align: center;
+  text-align: right;
   padding: 20px 40px;
-  color: antiquewhite;
-  font-size: 40px;
-  text-transform: uppercase;
-  margin-bottom: 20px;
+  color: brown;
+  font-size: 80px;
+  text-transform: lowercase;
+  margin-bottom: 100px;
 }
