--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,6 @@ body {
 .todo__wrapper {
   max-width: 980px;
   width: 100%;
-  text-align: center;
   margin: 0 auto;
 }
 
@@ -64,7 +63,7 @@ body {
   background-color: #f44336;
   margin: 35px 25px 40px 35px;
   padding: 40px;
-
+  text-align: center;
 }
 
 .todo__title {
@@ -83,4 +82,21 @@ body {
 .todo__form-btn {
   border: none;
   border-radius: 0px;
+}
+
+.todo__form-add {
+  max-width: 680px;
+  width: 100%;
+  padding: 12px 12px 15px;
+}
+
+.todo__form-btn {
+  max-width: 220px;
+  width: 100%;
+  font-size: 16px;
+}
+
+.todo__item {
+  color: #000000;
+  padding: ;
 }
