--- a/css/style.css
+++ b/css/style.css
@@ -115,17 +115,38 @@ body {
   background-color: #f9f9f9;
 }
 
-.Layer_1 {
+.todo__checked,
+.todo__delete {
+  position: relative;;
+}
+.todo__checked::before {
+  content: '';
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='utf-8'%3F%3E%3Csvg version='1.1' id='Layer_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' width='122.881px' height='89.842px' viewBox='0 0 122.881 89.842' enable-background='new 0 0 122.881 89.842' xml:space='preserve'%3E%3Cg%3E%3Cpath fill='%23ffffff' d='M1.232,55.541c-1.533-1.388-1.652-3.756-0.265-5.289c1.388-1.534,3.756-1.652,5.29-0.265l34.053,30.878l76.099-79.699 c1.429-1.501,3.804-1.561,5.305-0.132c1.502,1.428,1.561,3.803,0.133,5.305L43.223,88.683l-0.005-0.005 c-1.396,1.468-3.716,1.563-5.227,0.196L1.232,55.541L1.232,55.541z'/%3E%3C/g%3E%3C/svg%3E%0A");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  top: 0;
+  left: -30px;
   display: none;
+  cursor: pointer;
 }
 
-.Layer_2 {
+.todo__delete::before {
+  content: '';
   position: absolute;
   right: 20px;
-  top: calc(50% - 5px);
+  top: calc(50% - 10px);
   width: 10px;
   height: 10px;
   cursor: pointer;
+  display: block;
+  background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='utf-8'%3F%3E%3Csvg version='1.1' id='Layer_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' width='122.878px' height='122.88px' viewBox='0 0 122.878 122.88' enable-background='new 0 0 122.878 122.88' xml:space='preserve'%3E%3Cg%3E%3Cpath d='M1.426,8.313c-1.901-1.901-1.901-4.984,0-6.886c1.901-1.902,4.984-1.902,6.886,0l53.127,53.127l53.127-53.127 c1.901-1.902,4.984-1.902,6.887,0c1.901,1.901,1.901,4.985,0,6.886L68.324,61.439l53.128,53.128c1.901,1.901,1.901,4.984,0,6.886 c-1.902,1.902-4.985,1.902-6.887,0L61.438,68.326L8.312,121.453c-1.901,1.902-4.984,1.902-6.886,0 c-1.901-1.901-1.901-4.984,0-6.886l53.127-53.128L1.426,8.313L1.426,8.313z'/%3E%3C/g%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
 }
 
 .todo__item.todo__item--checked {
@@ -134,18 +155,12 @@ body {
   text-decoration: line-through;
 }
 
-.todo__item.todo__item--checked .Layer_1 {
+.todo__item.todo__item--checked .todo__checked::before {
   display: block;
-  width: 20px;
-  height: 15px;
-  fill: #ffffff;
-  position: absolute;
-  top: auto;
-  left: 15px;
 }
 
-.todo__item.todo__item--checked .Layer_2 {
-  fill: #ffffff;
+.todo__item.todo__item--checked .todo__delete::before{
+  background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='utf-8'%3F%3E%3Csvg version='1.1' id='Layer_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' width='122.878px' height='122.88px' viewBox='0 0 122.878 122.88' enable-background='new 0 0 122.878 122.88' xml:space='preserve'%3E%3Cg%3E%3Cpath fill='%23ffffff' d='M1.426,8.313c-1.901-1.901-1.901-4.984,0-6.886c1.901-1.902,4.984-1.902,6.886,0l53.127,53.127l53.127-53.127 c1.901-1.902,4.984-1.902,6.887,0c1.901,1.901,1.901,4.985,0,6.886L68.324,61.439l53.128,53.128c1.901,1.901,1.901,4.984,0,6.886 c-1.902,1.902-4.985,1.902-6.887,0L61.438,68.326L8.312,121.453c-1.901,1.902-4.984,1.902-6.886,0 c-1.901-1.901-1.901-4.984,0-6.886l53.127-53.128L1.426,8.313L1.426,8.313z'/%3E%3C/g%3E%3C/svg%3E");
 }
 
 .todo__item-text {
