--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,8 @@ body {
   color: #000000;
   padding: 30px 20px 30px 45px;
   position: relative;
+  display: flex;
+  justify-content: space-between;
 }
 
 .todo__item:nth-child(2n+1) {
@@ -115,9 +117,16 @@ body {
   background-color: #f9f9f9;
 }
 
+.todo__checked {
+  top: 0;
+  left: -20px;
+}
+
 .todo__checked,
 .todo__delete {
-  position: relative;;
+  position: relative;
+  border: none;
+  background-color: transparent;
 }
 .todo__checked::before {
   content: '';
@@ -129,7 +138,7 @@ body {
   background-size: contain;
   background-position: center;
   top: 0;
-  left: -30px;
+  left: 0;
   display: none;
   cursor: pointer;
 }
@@ -137,8 +146,8 @@ body {
 .todo__delete::before {
   content: '';
   position: absolute;
-  right: 20px;
-  top: calc(50% - 10px);
+  right: 0;
+  top: 5px;
   width: 10px;
   height: 10px;
   cursor: pointer;
@@ -155,8 +164,8 @@ body {
   text-decoration: line-through;
 }
 
-.todo__item.todo__item--checked .todo__checked::before {
-  display: block;
+.todo__item.todo__item--checked .todo__checked:before {
+  display: flex;
 }
 
 .todo__item.todo__item--checked .todo__delete::before{
@@ -165,4 +174,5 @@ body {
 
 .todo__item-text {
   cursor: pointer;
+  flex: 1;
 }
